# register

./: .gitignore  README.md
exa-register/: .gitignore  README.md  config.py  exa_browser_solver.py  mail_provider.py
grok-register/: .env.example  README.md  email_service.py  grok.py
openai-register/: .env.example  README.md  bitbrowser_client.py  openai_browser.py  openai_register.py  outlook_tw_provider.py  pyproject.toml
openai-register/tests/: test_browser_registration.py
outlook-register/: .env.example  .gitignore  README.md  bitbrowser_client.py  config.json  config.py  get_token.py  main.py  pyproject.toml  utils.py
outlook-register/controllers/: base_controller.py  bitbrowser_controller.py
outlook-register/tests/: test_bitbrowser.py
tavily-register/: .env.example  .gitignore  README.md  bitbrowser_client.py  config.py  email_checker.py  luckmail_provider.py  mail_provider.py  main.py  outlook_tw_provider.py  pyproject.toml  tavily_automation.py  utils.py
tavily-register/luckmail/: README.md  setup.py
tavily-register/luckmail/examples/: user_async.py  user_sync.py
tavily-register/tests/: test_integrations.py
