[project]
name = "outlook-register"
version = "0.1.0"
description = "Outlook registration automation using a dedicated BitBrowser profile"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faker",
    "playwright==1.53.0",
    "python-dotenv>=1.0.1",
    "requests",
]

[tool.uv]
package = false
